--- a/src/vl/vlwidget.ui
+++ b/src/vl/vlwidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>708</width>
-    <height>604</height>
+    <height>626</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="Line" name="line">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>120</y>
+     <x>0</x>
+     <y>150</y>
      <width>661</width>
      <height>20</height>
     </rect>
@@ -30,7 +30,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>150</y>
+     <y>180</y>
      <width>67</width>
      <height>17</height>
     </rect>
@@ -45,7 +45,7 @@
      <x>20</x>
      <y>10</y>
      <width>311</width>
-     <height>111</height>
+     <height>141</height>
     </rect>
    </property>
    <property name="frameShape">
@@ -57,8 +57,8 @@
    <widget class="QPushButton" name="paramOn">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>10</y>
+      <x>10</x>
+      <y>40</y>
       <width>89</width>
       <height>25</height>
      </rect>
@@ -70,8 +70,8 @@
    <widget class="QPushButton" name="paramOff">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>10</y>
+      <x>110</x>
+      <y>40</y>
       <width>89</width>
       <height>25</height>
      </rect>
@@ -97,7 +97,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>80</y>
+      <y>100</y>
       <width>281</width>
       <height>23</height>
      </rect>
@@ -119,7 +119,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>60</y>
+      <y>80</y>
       <width>101</width>
       <height>21</height>
      </rect>
@@ -131,9 +131,9 @@
    <widget class="QLabel" name="statusLabel_2">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>60</y>
-      <width>191</width>
+      <x>10</x>
+      <y>120</y>
+      <width>281</width>
       <height>21</height>
      </rect>
     </property>
@@ -144,8 +144,8 @@
    <widget class="Line" name="line_3">
     <property name="geometry">
      <rect>
-      <x>7</x>
-      <y>40</y>
+      <x>10</x>
+      <y>60</y>
       <width>291</width>
       <height>20</height>
      </rect>
@@ -154,12 +154,25 @@
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
+   <widget class="QPushButton" name="resetButton">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>40</y>
+      <width>91</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>VL Reset</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QComboBox" name="serverSet">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>150</y>
+     <x>80</x>
+     <y>180</y>
      <width>241</width>
      <height>25</height>
     </rect>
@@ -169,7 +182,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>180</y>
+     <y>210</y>
      <width>391</width>
      <height>181</height>
     </rect>
@@ -249,7 +262,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>사용가능한 로봇 목록 </string>
+     <string>사용할 로봇 목록 </string>
     </property>
    </widget>
   </widget>
@@ -257,7 +270,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>410</y>
+     <y>440</y>
      <width>391</width>
      <height>181</height>
     </rect>
@@ -267,7 +280,7 @@
    <property name="geometry">
     <rect>
      <x>410</x>
-     <y>150</y>
+     <y>170</y>
      <width>16</width>
      <height>441</height>
     </rect>
@@ -280,7 +293,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>380</y>
+     <y>410</y>
      <width>67</width>
      <height>17</height>
     </rect>
@@ -292,8 +305,8 @@
   <widget class="QTableWidget" name="settingTable_2">
    <property name="geometry">
     <rect>
-     <x>440</x>
-     <y>180</y>
+     <x>430</x>
+     <y>210</y>
      <width>261</width>
      <height>411</height>
     </rect>
@@ -302,10 +315,10 @@
   <widget class="QLabel" name="label_7">
    <property name="geometry">
     <rect>
-     <x>450</x>
-     <y>150</y>
+     <x>430</x>
+     <y>177</y>
      <width>221</width>
-     <height>17</height>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
@@ -316,7 +329,7 @@
    <property name="geometry">
     <rect>
      <x>340</x>
-     <y>150</y>
+     <y>180</y>
      <width>61</width>
      <height>25</height>
     </rect>
@@ -328,8 +341,8 @@
   <widget class="QPushButton" name="severSetBtn_2">
    <property name="geometry">
     <rect>
-     <x>630</x>
-     <y>150</y>
+     <x>620</x>
+     <y>180</y>
      <width>61</width>
      <height>25</height>
     </rect>
